Add possibility to configure test data root directory for TestDataReader